Add tzdata to base image
[ICSHWI-7212]

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -78,6 +78,7 @@ IMAGE_INSTALL_append = " sudo \
                          python3-pkgutil \
                          python3-pip \
                          sis8300 \
+                         tzdata \
                          "
 
 LINUX_VERSION_EXTENSION = "-cct"
