--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -60,13 +60,8 @@ IMAGE_INSTALL_append = " i2c-tools \
                          python3-runpy \
                          python3-multiprocessing \
                          python3-pip \
-                         chrony \
-                         autofs \
-                         rsyslog \
-                         openldap \
-                         tmux \
-                         tcpdump \
-                         "
+                         tzdata \
+                        "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
