--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ build_image:
     - bitbake libxpm
     - bitbake libjpeg-turbo
     - bitbake libpng
+    - bitbake libpwquality
     - bitbake libraw1394
     - bitbake libtirpc
     - bitbake libtool
@@ -198,6 +199,7 @@ build_image_cct:
     - bitbake libxpm
     - bitbake libjpeg-turbo
     - bitbake libpng
+    - bitbake libpwquality
     - bitbake libraw1394
     - bitbake libtirpc
     - bitbake libtool
@@ -486,6 +488,8 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libsm6*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libxfont*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libfontenc*.rpm" rpm-ics/yocto/ioxos/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-dev-*;*-locale-*" "*/*libpwquality*.rpm" rpm-ics/yocto/ioxos/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-dev-*;*-locale-*" "*/*cracklib*.rpm" rpm-ics/yocto/ioxos/ || true
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/ioxos/ || true
@@ -652,6 +656,8 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libxshmfence*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libxfont*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-ptest-*" "*/*libfontenc*.rpm" rpm-ics/yocto/cct/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-dev-*;*-locale-*" "*/*libpwquality*.rpm" rpm-ics/yocto/cct/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-dev-*;*-locale-*" "*/*cracklib*.rpm" rpm-ics/yocto/cct/ || true
     - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/cct/ || true
