Add recipes for tuneD and virt-what packages
Add the following new recipes:
 - recipes-ess/tuned/tuned_git.bb
 - recipes-ess/virt-what/virt-what_1.21.bb

Build and upload to Artifactory, along with dependencies:
 - gobject-introspection
 - libcairo-gobject2
 - libcairo2
 - libdrm2
 - libfontconfig1
 - libfreetype6
 - libgl-mesa
 - libglapi0
 - libglib
 - libjson
 - libpixman
 - libx11-xcb1
 - libxcb-dri2
 - libxcb-dri3
 - libxcb-glx0
 - libxcb-present0
 - libxcb-render0
 - libxcb-shm0
 - libxcb-sync1
 - libxcb-xfixes0
 - libxdamage1
 - libxext6
 - libxfixes3
 - libxrender1
 - libxshmfence1
 - libxxf86vm1
 - python3-dbus-1.2.8-r0
 - python3-decorator
 - python3-pip
 - python3-pycairo
 - python3-pygobject
 - python3-pyudev
 - systemtap

[ICSHWI-7120]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,6 +212,7 @@ build_image_fpgaioc:
     - bitbake conserver
     - bitbake ethercat
     - bitbake ethercat-tools
+    - bitbake tuned
     - bitbake package-index
   artifacts:
     paths:
@@ -449,3 +450,31 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*" "*/fpgautil*.rpm" rpm-ics/yocto/fpgaioc/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-ec-dev*;*kernel-module-ec-dbg*" "*/kernel-module-ec-*.rpm" rpm-ics/yocto/fpgaioc/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/ethercat-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*;*-doc-*" "*/tuned-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/virt-what-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/systemtap-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libcairo-gobject2-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libcairo2-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libdrm2-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libfontconfig1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libfreetype6-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libgl-mesa-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libglib-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libjson-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libpixman-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libx11-xcb1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-dri2-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-dri3-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-glx0-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-present0-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-render0-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-shm0-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-sync1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxcb-xfixes0-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxdamage1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxext6-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxfixes3-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxrender1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxshmfence1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/libxxf86vm1-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+
