Add en-gb and en-us UTF-8 locales to base images
Also install glibc-utils package in base image, to enable "locale" command.

ICSHWI-8213

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -79,7 +79,8 @@ IMAGE_INSTALL_append = " sudo \
                          python3-pip \
                          sis8300 \
                          tzdata \
-                         "
+                         glibc-utils \
+                        "
 
 LINUX_VERSION_EXTENSION = "-cct"
 
