--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -61,6 +61,7 @@ IMAGE_INSTALL_append = " i2c-tools \
                          python3-multiprocessing \
                          python3-pip \
                          tzdata \
+                         glibc-utils \
                         "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
