Build GSL and upload to package repository
[ICSHWI-8708]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,6 +85,7 @@ build_image:
     - bitbake tree
     - bitbake xfont
     - bitbake polkit
+    - bitbake gsl
     - bitbake kernel-devsrc
     - bitbake package-index
   artifacts:
@@ -223,6 +224,7 @@ build_image_cct:
     - bitbake kernel-devsrc
     - bitbake xfont
     - bitbake polkit
+    - bitbake gsl
     - bitbake package-index
   artifacts:
     paths:
@@ -496,6 +498,7 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="" "*/*glibc-binary-localedata-*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-dev-*;*-examples-*;*-locale-*" "*/polkit-*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="" "*/libmozjs-*.rpm" rpm-ics/yocto/ioxos/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="" "*/gsl-*.rpm" rpm-ics/yocto/ioxos/ || true
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/ioxos/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/ioxos/ || true
@@ -668,7 +671,8 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-staticdev-*;*-dev-*;*-locale-*" "*/*cracklib*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="" "*/*glibc-binary-localedata-*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*;*-dev-*;*-examples-*;*-locale-*" "*/polkit-*.rpm" rpm-ics/yocto/cct/ || true
-    - jfrog rt upload --flat=false --exclude-patterns="" "*/libmozjs-*.rpm" rpm-ics/yocto/ioxos/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="" "*/libmozjs-*.rpm" rpm-ics/yocto/cct/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="" "*/gsl-*.rpm" rpm-ics/yocto/cct/ || true
     - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/cct/ || true
